--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ProjectX</string>
     <string name="let_s_get_started">Let\'s Get Started</string>
     <string name="getStartedMessage">Sign up or login to get started with the classroom video</string>
-    <string name="terms_and_condition_message">By Signing up or logging in I accept the term of services and community guidelines and have read the Privacy policy</string>
+    <string name="terms_and_condition_message">By Signing up or logging in I accept the term of services, community guidelines and the Privacy policy</string>
     <string name="circle_bg_CONTENT_DESCP">CIRCLE_BG</string>
     <string name="continue_with_email_address">Continue with email address</string>
     <string name="continue_with_google">Continue with google</string>
