--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="continue_with_google">Continue with google</string>
     <string name="continue_with_facebook">Continue with facebook</string>
     <string name="continue_with_twitter">Continue with twitter</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
