--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectX</string>
+    <string name="app_name">Grovico</string>
     <string name="let_s_get_started">Let\'s Get Started</string>
     <string name="getStartedMessage">Sign up or login to get started with the classroom video</string>
     <string name="terms_and_condition_message">By Signing up or logging in I accept the term of services, community guidelines and the Privacy policy</string>
