--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,13 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="setting_icon">setting_icon</string>
+    <string name="students">Students</string>
+    <string name="_0_students">0 Students</string>
+    <string name="switch_to_student">Switch to Student</string>
+    <string name="logout">Logout</string>
+    <string name="switch_to_teacher">Switch to Teacher</string>
+    <string name="join_a_new_class">Join a new Class</string>
+    <string name="logout">Logout</string>
+    <string name="delete">delete</string>
 </resources>
